# bevy_bits

./: .gitignore  Cargo.toml  README.md  bevy.cursorrules  bevy0.15.cursorrules  clippy.toml  deny.toml
.cargo/: config.toml
crates/bevy_bits_wasm/: Cargo.toml  build.rs  communication.js
crates/bevy_bits_wasm/src/: main.rs  main_wasm.rs
crates/bit_template/src/: ribbit.rs
crates/bits_helpers/: Cargo.toml
crates/bits_helpers/assets/emojis/: convert.bat  license.txt
crates/bits_helpers/src/: bit.rs  emoji.rs  floating_score.rs  input.rs  lib.rs  restart.rs  ribbit_communication.rs  ribbit_simulation.rs  welcome_screen.rs  window_resizing.rs
crates/emoji_avoidance/: Cargo.toml
crates/emoji_avoidance/src/: game.rs  lib.rs  main.rs  obstacles.rs  player.rs  ribbit.rs
crates/emoji_cascade/: Cargo.toml
crates/emoji_cascade/src/: game.rs  grid.rs  lib.rs  main.rs  ribbit.rs  screen.rs
crates/emoji_cascade/src/grid/: components.rs  input.rs  matching.rs  sliding.rs  spawning.rs
crates/emoji_catcher/: Cargo.toml
crates/emoji_catcher/src/: core.rs  game_over.rs  gameplay.rs  lib.rs  main.rs  ribbit.rs  welcome.rs
crates/emoji_grabber/: Cargo.toml
crates/emoji_grabber/src/: gameplay.rs  lib.rs  main.rs  ribbit.rs  stage.rs  welcome.rs
crates/emoji_sequencer/: Cargo.toml
crates/emoji_sequencer/src/: animations.rs  cards.rs  effects.rs  game.rs  input.rs  lib.rs  main.rs  ribbit.rs  screen.rs  variables.rs
crates/flappy_gun/: Cargo.toml
crates/flappy_gun/assets/: license.txt
crates/flappy_gun/assets/objects/: bird.glb  pipe.glb
crates/flappy_gun/src/: gameplay.rs  lib.rs  main.rs  ribbit.rs
crates/flappy_gun/src/audio/: mod.rs
crates/flappy_gun/src/player/: controls.rs  inputs.rs  mod.rs
crates/flappy_gun/src/scene/: mod.rs  pipes.rs
crates/flappy_gun/src/ui/: mod.rs
crates/jelly_joust/: cargo.toml
crates/jelly_joust/src/: game.rs  lib.rs  main.rs  ribbit.rs
crates/marble_dropper/: cargo.toml
crates/marble_dropper/src/: core.rs  gameplay.rs  lib.rs  main.rs  physics.rs  ribbit.rs  welcome.rs
crates/master_mind/: Cargo.toml
crates/master_mind/src/: decoding_board.rs  lib.rs  main.rs  ribbit.rs  ui.rs
crates/match3/: Cargo.toml
crates/match3/src/: lib.rs  main.rs  ribbit.rs
crates/match3/src/match3/: board.rs  mat.rs  mod.rs  systems.rs
crates/math_quiz/: Cargo.toml
crates/math_quiz/src/: lib.rs  main.rs  ribbit.rs
crates/maze/: Cargo.toml
crates/maze/src/: lib.rs  main.rs  maze.rs  ribbit.rs
crates/memoji/: Cargo.toml
crates/memoji/src/: cards.rs  effects.rs  game.rs  input.rs  lib.rs  main.rs  ribbit.rs  screen.rs
crates/puzzle15/: Cargo.toml
crates/puzzle15/src/: lib.rs  main.rs  puzzle15.rs  ribbit.rs
crates/shape_finder/: Cargo.toml
crates/shape_finder/src/: core.rs  gameplay.rs  lib.rs  main.rs  ribbit.rs  stage.rs  welcome.rs
crates/shape_grabber/: Cargo.toml
crates/shape_grabber/src/: lib.rs  main.rs  ribbit.rs
crates/shape_masher/: Cargo.toml
crates/shape_masher/src/: lib.rs  main.rs  ribbit.rs
crates/shape_matcher/: Cargo.toml
crates/shape_matcher/src/: lib.rs  main.rs  ribbit.rs
crates/shape_memorizer/: Cargo.toml
crates/shape_memorizer/src/: lib.rs  main.rs  ribbit.rs
crates/shape_racer/: Cargo.toml
crates/shape_racer/src/: lib.rs  main.rs  ribbit.rs
crates/shape_shooter/: Cargo.toml
crates/shape_shooter/src/: lib.rs  main.rs  ribbit.rs
crates/shape_sidescroller/: Cargo.toml
crates/shape_sidescroller/src/: lib.rs  main.rs  ribbit.rs
crates/tower_tumble/: Cargo.toml
crates/tower_tumble/src/: blocks.rs  game.rs  input.rs  lib.rs  main.rs  physics.rs  ribbit.rs  screen.rs
crates/whack_a_mole/: Cargo.toml
crates/whack_a_mole/src/: lib.rs  main.rs  ribbit.rs  ui.rs
crates/wheres_waldo/: Cargo.toml
crates/wheres_waldo/src/: lib.rs  main.rs  ribbit.rs
examples/bit_template/: Cargo.toml
examples/bit_template/src/: lib.rs  main.rs
