[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
# Default license and edition
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Internal dependencies. No dependencies allowed to Ribbit here.
bits_helpers = { path = "crates/bits_helpers" }
ribbit_bits = { git = "https://github.com/ribbitgames/ribbit_bits.git" }

# External dependencies
anyhow = { version = "1.0.95" }
avian3d = { version = "0.2.1", features = ["debug-plugin"] }
bevy = { version = "0.15.1", features = ["jpeg", "webgpu"] }
bevy_asset_loader = { version = "0.22.0" }
bevy_kira_audio = { version = "0.22.0", features = ["ogg"] }
bevy_turborand = { version = "0.10.0", features = ["wyrand"] }
bevy_framepace = { version = "0.18.1" }
heck = { version = "0.5.0" }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
leafwing-input-manager = "0.16.0"
parking_lot = { version = "0.12.3" }
proc-macro2 = { version = "1.0.93" }
queues = { version = "1.1.0" }
quote = "1.0.37"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
strum = { version = "0.26.3", features = ["derive"] }
syn = "2.0.97"
thiserror = { version = "2.0.11" }
tracing = { version = "0.1.28" }
wasm-bindgen = { version = "=0.2.100" } # Needs to be synced with Leptos https://github.com/leptos-rs/cargo-leptos/blob/main/Cargo.toml
web-sys = { version = "=0.3.77", features = [
    "console",
    "MessageEvent",
    "Window",
] }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

elided-lifetimes-in-paths = "allow" # Adds lots of noise in Bevy code for no benefit
unsafe_code = "deny"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }

# Nursery expecption in allow list below 
cognitive_complexity = "allow" # Doesn't work well in practice

# Clippy pedantic lints, treat all as warnings by default
pedantic = { level = "warn", priority = -1 }

# Pedentic exceptions in allow list below
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
if_not_else = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
shadow_unrelated = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
unseparated_literal_suffix = "allow"

# Normal lints that we get often due to Bevy
type_complexity = "allow"

# Restriction lints
allow_attributes = "warn"
alloc_instead_of_core = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
bool_to_int_with_if = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_line_after_doc_comments = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
fallible_impl_from = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
large_stack_frames = "warn"
let_underscore_untyped = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_enforced_import_renames = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
