[package]
name = "bevy_bits_wasm"
edition.workspace = true
license.workspace = true
version = "0.1.3"

[lints]
workspace = true

[dependencies]
ribbit_bits.workspace = true

flappy_gun = { path = "../flappy_gun" }
master_mind = { path = "../master_mind" }
match3 = { path = "../match3" }
math_quiz = { path = "../math_quiz" }
maze = { path = "../maze" }
memoji = { path = "../memoji" }
puzzle15 = { path = "../puzzle15" }
shape_finder = { path = "../shape_finder" }
shape_grabber = { path = "../shape_grabber" }
shape_masher = { path = "../shape_masher" }
shape_memorizer = { path = "../shape_memorizer" }
shape_racer = { path = "../shape_racer" }
shape_sidescroller = { path = "../shape_sidescroller" }
shape_shooter = { path = "../shape_shooter" }
wheres_waldo = { path = "../wheres_waldo" }

bevy.workspace = true
getrandom.workspace = true # This is needed for rand to work in wasm
strum.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[build-dependencies]
heck.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
