[package]
name = "bevy_bits_wasm"
edition.workspace = true
license.workspace = true
version = "0.1.3"

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ribbit_bits.workspace = true

emoji_avoidance = { path = "../emoji_avoidance" }
emoji_catcher = { path = "../emoji_catcher" }
emoji_grabber = { path = "../emoji_grabber" }
emoji_sequencer = { path = "../emoji_sequencer" }
flappy_gun = { path = "../flappy_gun" }
master_mind = { path = "../master_mind" }
math_quiz = { path = "../math_quiz" }
memoji = { path = "../memoji" }
puzzle15 = { path = "../puzzle15" }
#tower_tumble = { path = "../tower_tumble" }
whack_a_mole = { path = "../whack_a_mole" }
wheres_waldo = { path = "../wheres_waldo" }

bevy.workspace = true
fastrand.workspace = true
strum.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
