[package]
name = "bits_helpers"
edition.workspace = true
license.workspace = true
version = "0.1.0"

[dependencies]
ribbit_bits.workspace = true

bevy.workspace = true
bevy_framepace.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
strum.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[lints]
workspace = true

[package.metadata.bevy]
assets_path = "assets"
