[package]
name = "flappy_gun"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0" # Comes from the original repository https://github.com/GitGhillie/bevy_bird/blob/main/Cargo.toml
repository = "https://github.com/GitGhillie/bevy_bird"

[lints]
workspace = true

[dependencies]
bits_helpers.workspace = true
ribbit_bits.workspace = true

avian3d.workspace = true
bevy_asset_loader.workspace = true
bevy_kira_audio.workspace = true
bevy_turborand.workspace = true
bevy.workspace = true
leafwing-input-manager.workspace = true
serde.workspace = true
tracing.workspace = true
