[package]
name = "maze"
version = "0.0.1"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
bits_helpers.workspace = true
ribbit_bits.workspace = true

bevy.workspace = true
rand.workspace = true
lazy_static = "1.5.0"

[dependencies.bitflags]
version = "2.6.0"

[lints]
workspace = true
