[package]
name = "tower_tumble"
version = "0.0.1"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
bits_helpers.workspace = true
ribbit_bits.workspace = true
bevy.workspace = true
avian2d = "0.2.1"
fastrand.workspace = true
strum.workspace = true

[lints]
workspace = true
